Blokada podczas ładowania

--- a/SygnalistaNF/SygnalistaNF.csproj
+++ b/SygnalistaNF/SygnalistaNF.csproj
@@ -80,6 +80,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
-	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerExceptionSygnalistaNFHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerExceptionSygnalistaNFHideInfoBar="True" XamarinHotReloadDebuggerTimeoutExceptionSygnalistaNFHideInfoBar="True" XamarinHotReloadGenericExceptionInfoBarSygnalistaNFHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
